# ArchInstall

./: .gitignore  .pre-commit-config.yaml  BRANCHING_STRATEGY.md  CI_CD.md  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  SHELL_TESTING.md  TESTING.md  TUI_README.md  archinstall-tui  build_output.txt  chroot_config.sh  config.json  config.sh  config.yaml  config_manager.sh  dialogs.sh  disk_strategies.sh  docker-compose.yml  install_arch.sh  install_config.conf  launch_tui_installer.sh  progress_comm.sh  run_tests.sh  test-locally.sh  test_aur_search  test_ci_setup.sh  test_dialog_error.sh  test_output.json  utils.sh  yaml_parser.sh
.github/workflows/: ci.yml  release.yml
src/: main.rs
tests/: run_shell_tests.sh  test_config_manager.bats  test_disk_strategies.bats  test_framework.sh  test_simple.bats  test_simple_fixed.bats  test_utils.bats  test_yaml_parser.bats  test_yaml_parser_working.bats
