[package]
name = "archinstall-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
ctrlc = "3.4"
portable-pty = "0.8.1"
tui-term = "0.2.0"
vt100-ctt = "0.16.0"
oneshot = "0.1.8"
